--- a/CSBConfig/Properties/Resources.resx
+++ b/CSBConfig/Properties/Resources.resx
@@ -145,4 +145,10 @@
   <data name="botsettinglogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\comments[1].png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="liveserverlogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1313423325_network 2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="summarylogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1313423411_script.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
